# Arb-Move

./: .gitignore  Move.toml  Published.toml  README.md
bot/: .env.example  package.json
bot-rs/: .env.example  Cargo.toml
bot-rs/crates/collector/: Cargo.toml
bot-rs/crates/collector/src/: lib.rs  pool_cache.rs  rpc_poller.rs  ws_stream.rs
bot-rs/crates/collector/src/parsers/: aftermath.rs  cetus.rs  deepbook.rs  flowx.rs  flowx_amm.rs  mod.rs  turbos.rs
bot-rs/crates/executor/: Cargo.toml
bot-rs/crates/executor/src/: coin_merger.rs  gas_monitor.rs  lib.rs  ptb_builder.rs  signer.rs  submitter.rs
bot-rs/crates/strategy/: Cargo.toml
bot-rs/crates/strategy/src/: circuit_breaker.rs  lib.rs  optimizer.rs  scanner.rs  simulator.rs
bot-rs/crates/types/: Cargo.toml
bot-rs/crates/types/src/: config.rs  decimals.rs  lib.rs  opportunity.rs  pool.rs
bot-rs/src/: main.rs
bot/src/: collector.ts  config.ts  index.ts  strategy.ts
docs/: gas-economics.md
scripts/: deploy-mainnet.sh  deploy-testnet.sh  dry-run-mainnet.sh  integration-test.sh
sources/adapters/: aftermath_adapter.move  cetus_adapter.move  deepbook_adapter.move  flowx_clmm_adapter.move  turbos_adapter.move
sources/core/: admin.move  events.move  profit.move
sources/strategies/: tri_hop.move  two_hop.move
tests/: admin_tests.move  profit_tests.move
