[package]
name = "arb-collector"
version.workspace = true
edition.workspace = true

[dependencies]
arb-types.workspace = true
tokio.workspace = true
reqwest.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
